@@ -1,0 +1,6 @@
+
+
+# If you .define_page() using a bootstrap.HTML5Page, a nicer error page is displayed, formatted with bootstrap
+# scenarios:
+#   - the page is layed out with a PageLayout
+#   - the page does not use a PageLayout
